fixing the offset scrolling navbar on mobile

--- a/frontend/src/scss/intro.scss
+++ b/frontend/src/scss/intro.scss
@@ -139,8 +139,4 @@
             }
         }
     }
-
-    .scrolled {
-        margin-bottom: 15rem;
-    }
 }
